--- a/docs/CV/cv-espanol.tex
+++ b/docs/CV/cv-espanol.tex
@@ -173,7 +173,7 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 %\years{2022} Estancia de Investigación. Licenciatura en Manejo Sustentable de la Zona Costera. ENES M\'erida, UNAM.\\
 
-%\years{2022} Modelado y Análisis Espacial. Licenciatura en Ciencias Ambientales. ENES M\'erida, UNAM.\\
+\years{2022} Modelado y Análisis Espacial. Licenciatura en Ciencias Ambientales. ENES M\'erida, UNAM.\\
 
 \years{2021} Modelos Matem\'aticos en Ecolog\'ia. Licenciatura en Ecología. ENES M\'erida, UNAM.\\
 
@@ -185,7 +185,7 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \years{2018-} Supervisor de proyecto de investigaci\'on en el programa \lq\lq Masters of Environmental Technology\rq\rq\, Imperial College London de Tenghua Huang.\\
 
-\years{2018-2019} Ayudant\'ia de estudiantes de doctorado en Imperial College London\footnote{\href{mailto:p.huxley@imperial.ac.uk}{Paul J. Huxley} and \href{mailto:h.shah16@imperial.ac.uk}{Hiral Shah}}.\\
+\years{2018-2019} Ayudant\'ia de estudiantes de doctorado en Imperial College London\footnote{\href{mailto:p.huxley@imperial.ac.uk}{Paul J. Huxley} y \href{mailto:h.shah16@imperial.ac.uk}{Hiral Shah}}.\\
 
 \years{2018-} Impartici\'on del curso: \lq\lq Modelando el espacio para modelar los nichos ecol\'ogicos con herramientas frecuentistas y bayesianas\rq\rq. Escuela Nacional de Estudios Superiores unidad M\'erida, Parque Cient\'ifico y Tecnol\'ogico de Yucat\'an. 5 de noviembre de 2018.
 
@@ -202,69 +202,66 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsection*{Art\'iculos en revistas arbitradas}
 
-\years{2021} \textbf{Gerardo Mar\'in}, Joseph Erinjery, Rikki Gumbs, Ruchira Somaweera, Dileepa Ediriweera, Peter J. Diggle, Anuradhani Kasturiratne, Janaka de Silva, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Integrating snake distribution, abundance and expert-derived behavioural traits predicts snakebite risk. \emph{Journal of Applied Ecology}. \url{https://doi.org/10.1111/1365-2664.14081}.\\
+\years{2022} \textbf{Gerardo Mart\'in}, Joseph J. Erinjery, Dileepa Ediriweera, David G. Lalloo, H. Janaka de Silva, Takuya Iwamura \& Kris A. Murray. A mechanistic model of snakebite as a zoonosis: envenoming incidence is driven by snake ecology, socioeconomics and its impacts on snakes. \emph{PLoS Neglected Tropical Diseases}. ISSN: 1935-2735. \url{http://dx.doi.org/10.1371/journal.pntd.0009867}.\\
 
-\years{2021} \textbf{Gerardo Mar\'in}, Joseph Erinjery, Dileepa Ediriweera, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Redefining snakebite as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts. \emph{MedRXiv}. \url{https://doi.org/10.1101/2021.10.01.21264438}.\\
+\years{2022} \textbf{Gerardo Mart\'in}, Carlos Y\'a\~nez Arenas \& Xavier Chiappa Carrara. Discrepancies between point process models and environmental envelopes identify the niche centroid-geography configuration. \emph{Ecological Modelling}. ISSN: 0304-3800. \url{https://doi.org/10.1016/j.ecolmodel.2022.109974}.\\
 
-\years{2021} \textbf{Gerardo Martín}, Carlos Y\'a\~nez-Arenas, Rodrigo S. Camacho, Eyal Goldstein, Takuya Iwamura, Kris A. Murray \& Xavier Chiappa-Carrara. Implications of global environmental change for the burden of snakebite. \emph{ToxiconX}.\\
+\years{2021} \textbf{Gerardo Mart\'in}, Joseph Erinjery, Rikki Gumbs, Ruchira Somaweera, Dileepa Ediriweera, Peter J. Diggle, Anuradhani Kasturiratne, Janaka de Silva, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Integrating snake distribution, abundance and expert-derived behavioural traits predicts snakebite risk. \emph{Journal of Applied Ecology}. ISSN: 1365-2664. \url{https://doi.org/10.1111/1365-2664.14081}.\\
 
-\years{2021} Eyal Goldstein,Joseph Erinjery, \textbf{Gerardo, Mart\'in}; Anuradhani Kasturiratne, Dileepa Ediriweera, Janaka de Silva, Peter J. Diggle, Peter, David G. Lalloo, Kris A. Murray, \& Takyua Iwamura. \textbf{Integrating human behavior and snake ecology with agent-based models to predict snakebite in high risk landscapes}. \emph{PLoS Neglected Tropical Diseases}.\\
+\years{2021} \textbf{Gerardo Mart\'in}, Joseph Erinjery, Dileepa Ediriweera, David G. Lalloo, Takuya Iwamura \& Kris A. Murray. Redefining snakebite as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts. \emph{MedRXiv}. \url{https://doi.org/10.1101/2021.10.01.21264438}.\\
+
+\years{2021} \textbf{Gerardo Martín}, Carlos Y\'a\~nez-Arenas, Rodrigo S. Camacho, Eyal Goldstein, Takuya Iwamura, Kris A. Murray \& Xavier Chiappa-Carrara. Implications of global environmental change for the burden of snakebite. \emph{ToxiconX}. ISSN: 2590-1710. \url{https://doi.org/10.1016/j.toxcx.2021.100069}.\\
+
+\years{2021} Eyal Goldstein,Joseph Erinjery, \textbf{Gerardo, Mart\'in}; Anuradhani Kasturiratne, Dileepa Ediriweera, Janaka de Silva, Peter J. Diggle, Peter, David G. Lalloo, Kris A. Murray, \& Takyua Iwamura. \textbf{Integrating human behavior and snake ecology with agent-based models to predict snakebite in high risk landscapes}. \emph{PLoS Neglected Tropical Diseases}. ISSN: 1935-2735. \url{https://doi.org/10.1371/journal.pntd.0009047}.\\
 
 \years{2020} Carlos Y\'a\~nez-Arenas, \textbf{Gerardo Mart\'in}, Luis Osorio-Olvera, Jazm\'in Escobar-Luj\'an, Sandra Casta\~no-Quintero \& Enrique Mart\'inez-Meyer. \textbf{The niche centrality hypothesis: key points about unfilled niches and the potential use of supraspecific modeling units}. \emph{Biodiversity Informatics}.\\
 
-\years{2020} \textbf{Gerardo Mart\'in}, Mario Espinoza, Michelle Heupel, \& Colin Simpfendorfer (2020). \textbf{Estimating marine protected area network benefits for reef sharks}. \emph{Journal of Applied Ecology}. eISSN: 1365-2664. \url{https://doi.org/10.1111/1365-2664.13706}. \href{https://besjournals.onlinelibrary.wiley.com/doi/toc/10.1111/(ISSN)1365-2664.Southwood_Prize_2020}{Nominado al premio Southwood 2020 a mejor artículo de la revista}.\\
+\years{2020} \textbf{Gerardo Mart\'in}, Mario Espinoza, Michelle Heupel, \& Colin Simpfendorfer. \textbf{Estimating marine protected area network benefits for reef sharks}. \emph{Journal of Applied Ecology}. eISSN: 1365-2664. \url{https://doi.org/10.1111/1365-2664.13706}. \href{https://besjournals.onlinelibrary.wiley.com/doi/toc/10.1111/(ISSN)1365-2664.Southwood_Prize_2020}{Nominado al premio Southwood 2020 a mejor artículo de la revista}.\\
 
-\years{2019} Kris Murray, \textbf{Gerardo Mart\'in} \& Takuya Iwamura (2019). \textbf{Focus on snake ecology to fight snakebite}. \emph{The Lancet}. (19) 325. ISSN: 01406736. \url{https://doi.org/10.1016/S0140-6736(19)32510-3}\\
+\years{2019} Kris Murray, \textbf{Gerardo Mart\'in} \& Takuya Iwamura. \textbf{Focus on snake ecology to fight snakebite}. \emph{The Lancet}. (19) 325. ISSN: 01406736. \url{https://doi.org/10.1016/S0140-6736(19)32510-3}\\
 
-\years{2018} \textbf{Mart\'in, Gerardo}; Becker, Daniel; Washburn, Alex \& Raina K. Plowright (2018) \textbf{Environmental persistence of influenza H5N1 is driven by temperature and salinity: insights from a Bayesian meta-analysis}. \emph{Frontiers in Ecology and Evolution}. eISSN: 2296701X. \url{https://doi.org/10.3389/fevo.2018.00131}\\
+\years{2018} \textbf{Gerardo Mart\'in}; Becker, Daniel; Washburn, Alex \& Raina K. Plowright. \textbf{Environmental persistence of influenza H5N1 is driven by temperature and salinity: insights from a Bayesian meta-analysis}. \emph{Frontiers in Ecology and Evolution}. eISSN: 2296701X. \url{https://doi.org/10.3389/fevo.2018.00131}\\
 
-\years{2018} Brannelly, Laura A.; \textbf{Gerardo Mart\'in}; Lewellyn, John; Skerratt, Lee \& Lee Berger (2018). \textbf{Size dependant susceptibility to chytridiomycosis in the invasive \emph{Rhinella marina}}. \emph{Diseases of Aquatic Organisms}. 131:107-120. ISSN: 01775103. eISSN: 16161580. \url{ https://doi.org/10.3354/dao03278}.\\
+\years{2018} Brannelly, Laura A.; \textbf{Gerardo Mart\'in}; Lewellyn, John; Skerratt, Lee \& Lee Berger. \textbf{Size dependant susceptibility to chytridiomycosis in the invasive \emph{Rhinella marina}}. \emph{Diseases of Aquatic Organisms}. 131:107-120. ISSN: 01775103. eISSN: 16161580. \url{ https://doi.org/10.3354/dao03278}.\\
 
-\years{2018} \textbf{Gerardo Mart\'in}; Y\'a\~nez-Arenas, Carlos; Plowright, Raina K.; Carla Chen \& Skerratt, Lee (2018). \textbf{Hendra virus spillover is a bimodal system driven by climatic factors}. \emph{EcoHealth}. 15: 526–542. ISSN: 16129202. eISSN: 16129210. \url{https://doi.org/10.1007/s10393-017-1309-y}.\\
+\years{2018} \textbf{Gerardo Mart\'in}; Y\'a\~nez-Arenas, Carlos; Plowright, Raina K.; Carla Chen \& Skerratt, Lee. \textbf{Hendra virus spillover is a bimodal system driven by climatic factors}. \emph{EcoHealth}. 15: 526–542. ISSN: 16129202. eISSN: 16129210. \url{https://doi.org/10.1007/s10393-017-1309-y}.\\
 
-\years{2018} \textbf{Gerardo Mart\'in}; Y\'a\~nez-Arenas, Carlos; Plowright, Raina K.; Carla Chen \& Skerratt, Lee (2018). \textbf{Climate change could increase the extent of areas at risk of Hendra virus spillover}. \emph{EcoHealth}. 15: 509–525. ISSN: 16129202. eISSN: 16129210. \url{https://doi.org/10.1007/s10393-018-1322-9}.\\
+\years{2018} \textbf{Gerardo Mart\'in}; Y\'a\~nez-Arenas, Carlos; Plowright, Raina K.; Carla Chen \& Skerratt, Lee. \textbf{Climate change could increase the extent of areas at risk of Hendra virus spillover}. \emph{EcoHealth}. 15: 509–525. ISSN: 16129202. eISSN: 16129210. \url{https://doi.org/10.1007/s10393-018-1322-9}.\\
 
-\years{2017} Y\'a\~nez Arenas, Carlos Alberto; Rioja-Nieto, Rodolfo; Dzul-Manzanilla, Felipe; \textbf{Gerardo Mart\'in}; Chiappa-Carrara, Xavier; Buenfil-\'Avila, Aura; Manrique-Saide, Pablo, Correa-Morales, Fabi\'an; D\'iaz-Qui\~n\'onez, Jos\'e Alberto; P\'erez-Renter\'ia, Crescencio; Ordo\~nez-\'Alvarez, Jos\'e \& Her\'on Huerta (2017). \textbf{Characterization of environmental suitability for the Asian tiger mosquito (\emph{Aedes albopictus}) in M\'exico}. \emph{Journal of Medical Entomology}. ISSN: 19382928. eISSN: 00222585. 55(1):69–77. \url{https://doi.org/10.1093/jme/tjx185}\\
+\years{2017} Carlos Alberto Y\'a\~nez-Arenas, Rodolfo Rioja-Nieto, Flipe Dzul-Manzanilla, \textbf{Gerardo Mart\'in}, Xavier Chiappa-Carrara, Aura Buenfil-\'Avila, Pablo Manrique-Saide, Fabi\'an Correa-Morales, Jos\'e Alberto D\'iaz-Qui\~n\'onez, Cresecencio P\'erez-Renter\'ia, Jos\'e Ordo\~nez-\'Alvarez \& Her\'on Huerta. \textbf{Characterization of environmental suitability for the Asian tiger mosquito (\emph{Aedes albopictus}) in M\'exico}. \emph{Journal of Medical Entomology}. ISSN: 19382928. eISSN: 00222585. 55(1):69–77. \url{https://doi.org/10.1093/jme/tjx185}\\
 
-\years{2017} \textbf{Gerardo Mart\'in}; Webb, Rebecca J.;Plowright, Raina K.; Chen, Carla  \& Lee F. Skerratt (2017). \textbf{Microclimates might limit indirect spillover of the bat borne zoonotic Hendra virus}. \emph{Microbial ecology}. 74: 106–115. ISSN: 1432184X. \url{https://doi.org/10.1007/s00248-017-0934-x}.\\
+\years{2017} \textbf{Gerardo Mart\'in}, Rebecca J. Webb, Raina K. Plowright, Carla Chen, \& Lee F. Skerratt. \textbf{Microclimates might limit indirect spillover of the bat borne zoonotic Hendra virus}. \emph{Microbial ecology}. 74: 106–115. ISSN: 1432184X. \url{https://doi.org/10.1007/s00248-017-0934-x}.\\
 
-\years{2016} \textbf{Gerardo Mart\'in}; Skerratt, Lee; Y\'a\~nez-Arenas, Carlos; Plowright, Raina K. \& Carla Chen (2016).) \textbf{Climatic suitability influences species specific abundance patterns of Australian flying foxes and risk of Hendra virus spillover}. \emph{One Health Journal}. 2: 115-121. ISSN: 23527714. \url{https://doi.org/10.1016/j.onehlt.2016.07.004}.\\
+\years{2016} \textbf{Gerardo Mart\'in}, Lee F. Skerratt, Carlos Y\'a\~nez-Arenas, Raina K. Plowright \& Carla Chen. \textbf{Climatic suitability influences species specific abundance patterns of Australian flying foxes and risk of Hendra virus spillover}. \emph{One Health Journal}. 2: 115-121. ISSN: 23527714. \url{https://doi.org/10.1016/j.onehlt.2016.07.004}.\\
 
-\years{2016} Alison J. Peel, Hume E. Field, Peter A. Reid, Raina K. Plowright, Christopher C. Broder, Lee F. Skerratt, David T. S. Hayman, Olivier Restif, Melanie Taylor, \textbf{Gerardo Mart\'in}, Gary Crameri, Ina Smith, Michelle Baker, Glenn A. Marsh, Jennifer Barr, Andrew C. Breed, James L. N. Wood, Navneet Dhand, Jenny-Ann Toribio, Andrew A. Cunningham, Ian Fulton, Wayne L. Bryden, Cristy Secombe, Lin-Fa Wang (2016). \textbf{The equine Hendra virus vaccine remains a highly effective preventative measure against infection in horses and humans: \lq The imperative to develop a human vaccine for the Hendra virus in Australia\rq\.} \emph{Infection Ecology and Epidemiology}. 6(1):31658. ISSN: 20008686. \url{https://doi.org/10.3402/iee.v6.31658}.\\
+\years{2016} Alison J. Peel, Hume E. Field, Peter A. Reid, Raina K. Plowright, Christopher C. Broder, Lee F. Skerratt, David T. S. Hayman, Olivier Restif, Melanie Taylor, \textbf{Gerardo Mart\'in}, Gary Crameri, Ina Smith, Michelle Baker, Glenn A. Marsh, Jennifer Barr, Andrew C. Breed, James L. N. Wood, Navneet Dhand, Jenny-Ann Toribio, Andrew A. Cunningham, Ian Fulton, Wayne L. Bryden, Cristy Secombe, Lin-Fa Wang. \textbf{The equine Hendra virus vaccine remains a highly effective preventative measure against infection in horses and humans: \lq The imperative to develop a human vaccine for the Hendra virus in Australia\rq\.} \emph{Infection Ecology and Epidemiology}. 6(1):31658. ISSN: 20008686. \url{https://doi.org/10.3402/iee.v6.31658}.\\
 
-\years{2015} \textbf{Gerardo Mart\'in}; Plowright, Raina K.; Chen, Carla; Kault, David; Selleck, Paul \& Lee F. Skerratt (2015). \textbf{Hendra virus survival does not explain the pattern of transmission and implicates relatively direct transmission routes}. \emph{Journal of General Virology}. 96(6). ISSN: 00221317. eISSN: 14652099. \url{https://doi.org/10.1099/vir.0.000073}.\\
+\years{2015} \textbf{Gerardo Mart\'in}, Raina K. Plowright, Carla Chen, Carla, David Kault, Paul Selleck \& Lee F. Skerratt. \textbf{Hendra virus survival does not explain the pattern of transmission and implicates relatively direct transmission routes}. \emph{Journal of General Virology}. 96(6). ISSN: 00221317. eISSN: 14652099. \url{https://doi.org/10.1099/vir.0.000073}.\\
 
-\years{2015} Plowright, Raina; Eby, Peggy; Hudson, Peter; Smith, Ina; Westcott, David; Bryden, Wayne; Middleton, Deborah; Reid, Peter; McFarlane, Rosemary; \textbf{Gerardo Mart\'in}; Tabor, Gary; Skerratt, Lee; Anderson, Dale; Crameri, Gary; Quammen, David; Jordan, David; Freeman, Paul; Wang, Lin-Fa; Epstein, Jonathan; Marsh, Glenn; Kung, Nina \& Hamish McCallum (2015). \textbf{Ecological Dynamics of Emerging Bat Virus Spillover}. \emph{Proceedings of the Royal Society B}.  282(1798). ISSN: 09628452. \url{https://doi.org/10.1098/rspb.2014.2124}.\\
+\years{2015} Raina K. Plowright, Peggy Eby, Peter Hudson,Ina Smith, David Westcott, Wayne Bryden, Deborah Middleton, Peter Reid, Rosemary McFarlane, \textbf{Gerardo Mart\'in}, Gary Tabor, Lee Skerratt, Dale Anderson, Gary Crameri, David Quammen, David Jordan, Paul Freeman, Lin-Fa Wang, Jonathan Epstein, Glenn Marsh, Nina Kung \& Hamish McCallum. \textbf{Ecological Dynamics of Emerging Bat Virus Spillover}. \emph{Proceedings of the Royal Society B}.  282(1798). ISSN: 09628452. \url{https://doi.org/10.1098/rspb.2014.2124}.\\
 
-\years{2013} Valdez-Lares, Rosaura; \textbf{Mart\'in-Mu\~noz de Cote, Gerardo A.}; Mu\~niz-Mart\'inez, Ra\'ul \& Georgina Santos-Barrera (2013). \textbf{New distributional records for amphibians from Durango, M\'exico}. \emph{Herpetological Review}. 44 (4): 646-649. ISSN: 0018084X. \url{https://bit.ly/2zIsM3R}.\\
+\years{2013} Rosaura Valdez-Lares, \textbf{Gerardo A. Mart\'in-Mu\~noz de }, Ra\'ul Mu\~niz-Mart\'inez \& Georgina Santos-Barrera. \textbf{New distributional records for amphibians from Durango, M\'exico}. \emph{Herpetological Review}. 44 (4): 646-649. ISSN: 0018084X. \url{https://bit.ly/2zIsM3R}.\\
 
 \subsubsection*{Art\'iculos en revisión}
 
-\years{2022} Joseph Erinjery, Eyal Golstein, \textbf{Gerardo Mart\'in}, et al. \textbf{Land use change in Sri Lanka during the armed conflict}. \emph{Journal of Land Use Policy}. \\
+\years{2022} Joseph J. Erinjery, Eyal Golstein, \textbf{Gerardo Mart\'in}, et al. \textbf{Land use change in Sri Lanka during the armed conflict}. \emph{Journal of Land Use Policy}. \\
 
-\years{2022} Eyal Golstein, Joseph Erinjery, \textbf{Gerardo Mart\'in}, et al. \textbf{Farmers adaptation to climate uncertainty as drivers of snakebite risk}. \emph{Nature communications}.\\
-
-\years{2021} \textbf{Gerardo Mart\'in}, Joseph Erinjery, Taluya Iwamura \& Kris A. Murray. \textbf{Redefining snakebite envenoming as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts}. \emph{PLoS Neglected Tropical Diseases}.\\
-
-\years{2021} \textbf{Gerardo Mart\'in}; Carlos Y\'a\~nez-Arenas \& Xavier Chiappa-Carrara. \textbf{Discrepancies between PPMs and MVEs identify the niche centroid - geography configuration}. \emph{Ecological Modelling}.
+\years{2022} Eyal Golstein, Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, et al. \textbf{Farmers adaptation to climate uncertainty as drivers of snakebite risk}. \emph{Nature communications}.\\
 
 \subsubsection*{Art\'iculos en preparaci\'on}
 
-\years{2019} \textbf{Gerardo Mart\'in}, Rebecca J. Webb, Raina K. Plowright, Carla Chen \& Lee F. Skerratt. \textbf{Tree cover in paddocks is the main determinant of exposure to Hendra virus in horses}.\\
+\years{2022}  \textbf{Gerardo Mart\'in}, Joseph Erinjery, Eyal Goldstein, Takuya Iwamura \& Kris Murray. \textbf{Global change projections for snakebite incidence in South Asia: Conflicts between public health and conservation objectives}.\\
 
-\subsubsection*{Proyectos en curso}
+\years{2022} 	Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, Eyal Goldstein, Kris Murray \& Takuya Iwamura. \textbf{Global change predictions based on socioeconomic pathways for Sri Lanka}.\\
+
+\subsubsection*{Investigaciones en curso}
 
 \begin{itemize}
-
-	\item  Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, Eyal Goldstein, Kris Murray \& Takuya Iwamura. \textbf{Global change predictions based on socioeconomic pathways for Sri Lanka}.\\
-	
-	\item \textbf{Gerardo Mart\'in}; Erinjery, Joseph; Goldstein, Eyal; Iwamura, Takuya \& Kris Murray. \textbf{Snakebite burden and shared socioeconomic pathways scenarios for a South Asian hotspot}.\\
 	
 	\item Tiffany Kosch, \& \textbf{Gerardo Mart\'in}. \textbf{Modelling the prevalence of amphibian chytridiomycosis in Peru}.\\
 	
 	\item \textbf{Gerardo Mart\'in}, John R. Giles, David Westcott, Hazel Parry, Raina Plowright, Raina, Carla Chen \& Lee F. Skerratt. \textbf{Landscape level mechanisms driving risk of Hendra virus spillover}.\\
 \end{itemize}
-
 
 
 \subsection*{Art\'iculos de divulgaci\'on}
@@ -304,6 +301,20 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 		perotensis}) y dos especies dom\'esticas}. Pl\'atica.\\
 
 \years{2009} 1$^{er}$ Congreso Nacional de Ecolog\'ia de Enfermedades Infecciosas y Medicina de la Conservaci\'on, Veracruz, Ver., Mexico. \textbf{Modelo de leptospirosis y comparaci\'on de sufrecuencia entre dos sitios en la ardilla de Perote (\emph{Spermophilus perotensis}) y dos especies dom\'esticas}. Pl\'atica.\\
+
+\section*{Proyectos financiados}
+
+\subsection*{Como responsable}
+
+\years{2021} Estimación estadística de nichos ecológicos y aplicaciones ecológicas, salud pública y conservación, PAPIIT-UNAM, IA200822.
+
+\subsection*{Como participante}
+
+\years{2018} The dynamic challenge of snakebite in South Asia. Medical Research Council UK.\\
+
+\years{2017} Predicting pathogen spillover. US Ministry of Defense.\\
+
+\years{2012} Modelling Hendra virus transmission from flying foxes to horses. Rural Industries Research and Development Coporation, AU.
 
 \section*{Educaci\'on cont\'inua}
 
