CV PNTD y platicas

--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -173,9 +173,19 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 %\years{2022} Estancia de Investigación. Licenciatura en Manejo Sustentable de la Zona Costera. ENES M\'erida, UNAM.\\
 
+\years{2022} Estad\'istica Multivariada. Licenciatura en Manejo Sustentable de Zonas Costeras. ENES M\'erida, UNAM.\\
+
+\years{2022} M\'etodos de Campo y Laboratorio. Licenciatura en Manejo Sustentable de Zonas Costeras. ENES M\'erida, UNAM.\\
+
+\years{2022} Introducci\'on a la Estad\'istica. Licenciatura en Ciencias Ambientales. ENES M\'erida, UNAM.\\
+
+\years{2022} Modelaci\'on Matem\'atica. Licenciatura en Ciencias Ambientales. ENES M\'erida, UNAM.\\
+
+\years{2022} Modelos Matem\'aticos en Ecolog\'ia I. Licenciatura en Ecolog\'a. ENES M\'erida, UNAM.\\
+
 \years{2022} Modelado y Análisis Espacial. Licenciatura en Ciencias Ambientales. ENES M\'erida, UNAM.\\
 
-\years{2021} Modelos Matem\'aticos en Ecolog\'ia. Licenciatura en Ecología. ENES M\'erida, UNAM.\\
+\years{2021} Modelos Matem\'aticos en Ecolog\'ia. Licenciatura en Ecolog\'a. ENES M\'erida, UNAM.\\
 
 \years{2021} Modelaci\'on Matem\'atica. Licenciatura en Ciencias Ambientales. ENES M\'erida, UNAM.\\
 
@@ -192,6 +202,9 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 %\hrule
 \section*{Proyectos, becas y reconocimientos}
 \noindent
+
+\years{2022-2023} Responsable de proyecto PAPIIT IA200822 \lq\lq Estimaci\'on estad\'istica de nichos ecol\'ogicos y aplicaciones ecol\'ogicas, salud p\'ublica y conservaci\'on\rq\rq. \\
+
 \years{2020-2021} Beca DGAPA para investigación posdoctoral en la Escuela Nacional de Estudios Superiores unidad Mérida, UNAM.\\
 
 \years{2012-2016} Beca para investigaci\'on del National Hendra Virus Research Program, Australia. RIRDC PRJ-008213 (Models that predict Hendra virus transmission from flying foxes to horses).\\
@@ -201,6 +214,8 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 \section*{Publicaciones y pl\'aticas}
 
 \subsection*{Art\'iculos en revistas arbitradas}
+
+\years{2022} Jos\'e Mar\'ia Guti\'errez, Juliette Borri, Tamara Giles-Vernick, Romain Duda, Abdurazaq Habib, Anita Malhotra, \textbf{Gerardo Mart\'in}, Anna F. V. Pintor, Julien Potet, Terrence Scott, Isabelle Bolon, \& Rafael Ruiz Cata\~neda. Understanding and tackling snakebite envenoming with transdisciplinary research. \emph{PLoS Neglected Tropical Diseases}. ISSN: 1935-2735. \emph{En prensa}. \\
 
 \years{2022} \textbf{Gerardo Mart\'in}, Joseph J. Erinjery, Dileepa Ediriweera, David G. Lalloo, H. Janaka de Silva, Takuya Iwamura \& Kris A. Murray. A mechanistic model of snakebite as a zoonosis: envenoming incidence is driven by snake ecology, socioeconomics and its impacts on snakes. \emph{PLoS Neglected Tropical Diseases}. ISSN: 1935-2735. \url{http://dx.doi.org/10.1371/journal.pntd.0009867}.\\
 
@@ -274,6 +289,16 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 
 \subsection*{Pl\'aticas y p\'osters}
+
+\years{2022} Congreso Científico Mexicano de Ecología, Oaxaca, Oax.
+
+\begin{enumerate}
+	\item Presentación oral: \textbf{Identificando la configuración geográfico-ambiental de los nichos ecológicos}
+	\item Poster: \textbf{El ofidismo como un proceso dinámico ante el cambio global}
+	\item Poster: \textbf{Modelos de agentes para optimizar la protección de tiburones de arrecife en redes de áreas naturales}
+\end{enumerate}
+
+\years{2020} Seminario Institucional, ENES Mérida. \textbf{Puentes cuantitativos entre medicina y ecología}. \\
 
 \years{2019} Association for Tropical Biology and Conservation, Asia-Pacific Chapter, Thulhiriya, Sri Lanka. \textbf{Abundance of venomous snakes of Sri Lanka in relation to climate and land cover}.\\
 
