--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -173,7 +173,7 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 %\years{2022} Estancia de Investigación. Licenciatura en Manejo Sustentable de la Zona Costera. ENES M\'erida, UNAM.\\
 
-\years{2022} Estad\'istica Multivariada. Licenciatura en Manejo Sustentable de Zonas Costeras. ENES M\'erida, UNAM.\\
+\years{2022} An\'alisis Multivariado. Licenciatura en Manejo Sustentable de Zonas Costeras. ENES M\'erida, UNAM.\\
 
 \years{2022} M\'etodos de Campo y Laboratorio. Licenciatura en Manejo Sustentable de Zonas Costeras. ENES M\'erida, UNAM.\\
 
@@ -214,6 +214,8 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 \section*{Publicaciones y pl\'aticas}
 
 \subsection*{Art\'iculos en revistas arbitradas}
+
+\years{2022} Eyal Goldstein, Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, H. Janaka de Silva, Peter J. Diggle, David G. Lalloo, Kris A. Murray \& Takuya Iwamura. \emph{sScience}. \emph{En prensa}. \\
 
 \years{2022} Jos\'e Mar\'ia Guti\'errez, Juliette Borri, Tamara Giles-Vernick, Romain Duda, Abdurazaq Habib, Anita Malhotra, \textbf{Gerardo Mart\'in}, Anna F. V. Pintor, Julien Potet, Terrence Scott, Isabelle Bolon, \& Rafael Ruiz Cata\~neda. Understanding and tackling snakebite envenoming with transdisciplinary research. \emph{PLoS Neglected Tropical Diseases}. ISSN: 1935-2735. \emph{En prensa}. \\
 
@@ -261,8 +263,6 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \years{2022} Joseph J. Erinjery, Eyal Golstein, \textbf{Gerardo Mart\'in}, et al. \textbf{Land use change in Sri Lanka during the armed conflict}. \emph{Journal of Land Use Policy}. \\
 
-\years{2022} Eyal Golstein, Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, et al. \textbf{Farmers adaptation to climate uncertainty as drivers of snakebite risk}. \emph{Nature communications}.\\
-
 \subsubsection*{Art\'iculos en preparaci\'on}
 
 \years{2022}  \textbf{Gerardo Mart\'in}, Joseph Erinjery, Eyal Goldstein, Takuya Iwamura \& Kris Murray. \textbf{Global change projections for snakebite incidence in South Asia: Conflicts between public health and conservation objectives}.\\
@@ -289,6 +289,8 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 
 \subsection*{Pl\'aticas y p\'osters}
+
+\years{2022} Congreso del Posgrado en Ciencias de la Producción y de la Salud Animal, Facultad de Medicina Veterinaria y Zootecnia, UNAM, Ciudad de México. \emph{Ofidismo y ecología de las zoonosis ante el cambio global}, ponencia magistral.\\
 
 \years{2022} Congreso Científico Mexicano de Ecología, Oaxaca, Oax.
 
