--- a/cursos_lic.Rmd
+++ b/cursos_lic.Rmd
@@ -15,6 +15,8 @@ output: distill::distill_article
 # Licenciatura en Ecología
 - [Modelos matemáticos en ecología I (2022-1)](https://gerardommc.github.io/Modelos-matematicos-ECO-I/)
 
+- [Ecología de poblaciones](https://gerardommc.github.io/Ecologia-poblaciones/)
+
 # Licenciatura en Ciencias Ambientales
 - [Modelación matemática (Ciencias Ambientales, 2022-1)](https://gerardommc.github.io/Modelacion-matematica-CA/)
 
