--- a/publicaciones.Rmd
+++ b/publicaciones.Rmd
@@ -10,6 +10,14 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Revistas arbitradas
 
+- Eyal Goldstein, Joseph J. Erinjery, **Gerardo Martín**, H. Janaka de Silva, Peter J. Diggle, David G. Lalloo, Kris A. Murray & Takuya Iwamura. Climate change maladaptation for health: Agricultural practice against shifting seasonal precipitation affects snakebite risk for rural farmers in the tropics. *iScience*. ISSN: 2589-0042 [https://doi.org/10.1016/j.isci.2023.105946](https://doi.org/10.1016/j.isci.2023.105946)
+
+- José María Gutiérrez, Juliette Borri, Tamara Giles-Vernick, Romain Duda, Abdurazaq Habib, Anita Malhotra, **Gerardo Martín**, Anna F. V. Pintor, Julien Potet, Terrence Scott, Isabelle Bolon, & Rafael Ruiz Catañeda. Understanding and tackling snakebite envenoming with transdisciplinary research. *PLoS Neglected Tropical Diseases*. ISSN: 1935-2735. (ttps://doi.org/10.1371/journal.pntd.0010897).
+
+- **Gerardo Martín**, Joseph J. Erinjery, Dileepa Ediriweera, David G. Lalloo, H. Janaka de Silva, Takuya Iwamura & Kris A. Murray. A mechanistic model of snakebite as a zoonosis: envenoming incidence is driven by snake ecology, socioeconomics and its impacts on snakes. *PLoS Neglected Tropical Diseases*. ISSN: 1935-2735. [http://dx.doi.org/10.1371/journal.pntd.0009867](http://dx.doi.org/10.1371/journal.pntd.0009867).
+
+- **Gerardo Martín**, Carlos Yáñez Arenas & Xavier Chiappa Carrara. Discrepancies between point process models and environmental envelopes identify the niche centroid-geography configuration. *Ecological Modelling*. ISSN: 0304-3800. [https://doi.org/10.1016/j.ecolmodel.2022.109974](https://doi.org/10.1016/j.ecolmodel.2022.109974).
+
 - **Gerardo Martín**, Joseph Erinjery, Rikki Gumbs, Ruchira Somaweera, Dileepa Ediriweera, Peter J. Diggle, Anuradhani Kasturiratne, Janaka de Silva, David G. Lalloo, Takuya Iwamura & Kris A. Murray (2021). **Integrating snake distribution, abundance and expert-derived behavioural traits predicts snakebite risk**. *Journal of Applied Ecology, En-prensa*. Impacto JCR: 5.8.\\
 
 - **Gerardo Martín**, Joseph Erinjery, Dileepa Ediriweera, David G. Lalloo, Takuya Iwamura & Kris A. Murray (2021). **Redefining snakebite as a zoonosis: disease incidence is driven by snake ecology, socioeconomics and anthropogenic impacts**. *MedRXiv*. [https://doi.org/10.1101/2021.10.01.21264438](https://doi.org/10.1101/2021.10.01.21264438).\\
