--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -265,6 +265,8 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsubsection*{Art\'iculos en preparaci\'on}
 
+\years{2022} Josph J. Erinjery, \textbf{Gerardo Mart\'in}, Eyal Goldstei, Kris A. Murray \& Takuya Iwamura. \textbf{Population and climate change scenarios can lead to forest cover loss in Sri Lanka even under the current levels of forest protection}.\\
+
 \years{2022}  \textbf{Gerardo Mart\'in}, Joseph Erinjery, Eyal Goldstein, Takuya Iwamura \& Kris Murray. \textbf{Global change projections for snakebite incidence in South Asia: Conflicts between public health and conservation objectives}.\\
 
 \years{2022} 	Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, Eyal Goldstein, Kris Murray \& Takuya Iwamura. \textbf{Global change predictions based on socioeconomic pathways for Sri Lanka}.\\
