--- a/cursos_lic.Rmd
+++ b/cursos_lic.Rmd
@@ -20,6 +20,6 @@ output: distill::distill_article
 # Licenciatura en Ciencias Ambientales
 - [Modelación matemática (Ciencias Ambientales, 2022-1)](https://gerardommc.github.io/Modelacion-matematica-CA/)
 
-- [Análisis y Modelado Espacial](https://gerardommc.github.io/Analisis-Modelado-Espacial/)
+- [Análisis y Modelado Espacial](https://gerardommc.github.io/Analisis-Modelado-Espacial/) ([presentaciones del curso](https://gerardommc.github.io/Analisis-Modelado-Esp-presentaciones/))
 
 - [Introducción a la Estadística](https://gerardommc.github.io/Introduccion-Estadistica-LCA/)
